hphp/test/slow/ext_array/array_fill_keys_tostring.php.expectf
Fatal error: keys must be ints or strings in %s/array_fill_keys_tostring.php on line 7
